--- a/src/CTA/appsettings.json
+++ b/src/CTA/appsettings.json
@@ -6,5 +6,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=SQL6001.SmarterASP.NET;Initial Catalog=DB_A22861_demeshchik;User Id=DB_A22861_demeshchik_admin;Password=demeshik2012;"
   }
 }
