--- a/src/CTA/appsettings.json
+++ b/src/CTA/appsettings.json
@@ -8,6 +8,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=SQL6001.SmarterASP.NET;Initial Catalog=DB_A22861_demeshchik;User Id=DB_A22861_demeshchik_admin;Password=demeshik2012;"
+    "DefaultConnection": "Data Source=SQL6001.SmarterASP.NET;Initial Catalog=DB_A22861_cta;User Id=DB_A22861_cta_admin;Password=demeshik2012;"
   }
 }
