--- a/src/CTA/appsettings.json
+++ b/src/CTA/appsettings.json
@@ -9,5 +9,10 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=SQL6001.SmarterASP.NET;Initial Catalog=DB_A22861_cta;User Id=DB_A22861_cta_admin;Password=demeshik2012;"
+  },
+  "Cloudinary": {
+    "CloudName": "djrazor308",
+    "ApiKey": "699756615932382",
+    "ApiSecret": "m5MHlmJJkZmGa_H_7VPdYpo6JyA"
   }
 }
